Simplify setup with JDK auto-provisioning and an experiment-first README